--- a/styles.css
+++ b/styles.css
@@ -79,15 +79,15 @@
         }
 
         .project {
-            display: flex;
-            justify-content: space-between; 
-            align-items: center;
-            padding: 20px 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 20px 40px;
         }
 
         .project-details {
             flex: 1;
-            text-align: left;
+            margin-right: left;
         }
 
         .project img {
@@ -162,6 +162,13 @@
             .Still-image img {
                 max-width: 50%;
             }
+            
+            .video-container {
+                margin-left: 0;
+                margin-top: 15px;
+                max-width: 100%;
+            }
+            
         }
 
         /* Footer */
@@ -173,3 +180,18 @@
             font-size: 15px;
         }
 
+        .video-container {
+        margin-left: 20px;    
+        flex: 0 0 30%;   
+        position: relative;
+        padding-bottom: 22.5%; 
+        height: 0;
+        }
+
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
