--- a/styles.css
+++ b/styles.css
@@ -101,11 +101,15 @@
             height: auto;
         }
 
-        .sprites-image img,
+        .sprites-image img{
+            max-width: 200px;
+        }
+
+
         .sesame-image img,
         .Prototype-image img,
         .Portrait-image img {
-            max-width: 200px;
+            max-width: 500px;
         }
 
         .Still-image {
@@ -194,4 +198,28 @@
             left: 0;
             width: 100%;
             height: 100%;
+        }
+
+        .mp4-container {
+        margin-left: 20px;
+        flex: 0 0 auto; 
+        max-width: 480px; 
+        }
+
+        .mp4-container video {
+        width: 100%; 
+        height: auto;
+        }
+
+        .stacked-videos {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;        
+        max-width: 260px;
+        margin-left: 20px; 
+        }
+
+        .stacked-videos video {
+        width: 100%;
+        height: auto;
         }
