--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -69,8 +69,7 @@
         margin-bottom: 15px;
     }
 
-    #contact-email,
-    #contact-phone {
+    #contact-email {
         margin: 3px 0;
     }
 
