--- a/Projects/booping_beep/boopingBeep.css
+++ b/Projects/booping_beep/boopingBeep.css
@@ -125,6 +125,7 @@
 .screenshots-grid img {
     width: 100%;
     height: auto;
+    margin-bottom: 40px;
 }
 
 /* Software */
@@ -154,6 +155,6 @@
   }
 
   .project-credits {
-    max-width: 100%; 
+    max-width: 100%;
   }
 }
