--- a/Projects/fitch/fitch.css
+++ b/Projects/fitch/fitch.css
@@ -1,5 +1,5 @@
 .project-credits {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 /* Mobile Portrait & Landscape */
@@ -19,6 +19,14 @@
     }
 
     video {
+        order: 1;
+        width: 80vw;
+        max-width: 800px;
+        margin: 1rem auto;
+        display: block;
+    }
+
+    .project-details img[alt="Screenshot 1"] {
         order: 1;
         width: 80vw;
         max-width: 800px;
