--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -95,18 +95,6 @@
     transition: none;
 }
 
-.hamburger.open span:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger.open span:nth-child(2) {
-    opacity: 0;
-}
-
-.hamburger.open span:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-}
-
 /* Projects Hero */
 .projects-hero {
     text-align: center;
@@ -186,33 +174,49 @@
 }
 
 /* Mobile + Tablet */
-@media (max-width: 1024px) {
-  .hamburger {
-    display: flex;
-  }
+    @media (max-width: 1024px) {
+    .hamburger {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 28px;
+        height: 20px; 
+        cursor: pointer;
+        background: none;
+        border: none;
+        padding: 0;
+    }
+
+    .hamburger span {
+        display: block;
+        width: 100%; 
+        height: 3px;
+        background-color: #614b4b;
+        border-radius: 2px;
+    }
 
   .projects-header .header-center {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;     
-    transform: none;
-    display: none;
-    flex-direction: column;
-    gap: 10px;
-    background-color: #e8d8c4;
-    padding: 10px 15px;
-    margin-top: -5px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;     
+        transform: none;
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        background-color: #e8d8c4;
+        padding: 10px 15px;
+        margin-top: -5px;
   }
 
   .projects-header .header-center.active {
-    display: flex;
+        display: flex;
   }
 
   .projects-header .header-center a {
-    width: 100%;
-    text-align: center;
-    padding: 12px 0;
+        width: 100%;
+        text-align: center;
+        padding: 12px 0;
   }
 }
 
