added/updated projects & artwork
- added FUNK VS FRIGHT project
- updated resume
- added gameplay video to Booping Beep
- added art

--- a/Projects/funk_vs_fright/funkVsFright.css
+++ b/Projects/funk_vs_fright/funkVsFright.css
@@ -171,4 +171,11 @@
         margin: 1rem auto;
         display: block;
     }
+
+    .project-description + .video-container,
+    .video-container {
+        order: 2; 
+        max-width: 95vw;
+        padding-bottom: calc(95vw * 9 / 16);
+    }
 }
